--- a/Audit-Detect/Audit-Sentinel-Rules.ipynb
+++ b/Audit-Detect/Audit-Sentinel-Rules.ipynb
@@ -56,8 +56,9 @@
     }
    },
    "source": [
-    "# Check the Rule Count\n",
-    "This simply check will let you know if you need to validate any adds or removes"
+    "## Check the Rule Count\n",
+    "\n",
+    "> This simply check will let you know if you need to validate any adds or removes"
    ]
   },
   {
@@ -82,9 +83,9 @@
     }
    },
    "source": [
-    "# Alert Per Result Not Set\n",
-    "Very few Rules should not be set to AlertPerResult\n",
-    "Majority of Sentinel Logic will be AlertPerResult"
+    "## Alert Per Result Not Set\n",
+    "> Very few Rules should not be set to AlertPerResult\n",
+    "> Majority of Sentinel Logic will be AlertPerResult"
    ]
   },
   {
@@ -111,11 +112,11 @@
     }
    },
    "source": [
-    "# Quick Config Checks for Rules Not Going to Console\n",
-    "Decrease/Increase in counts\n",
-    "Setting the rule to disabled\n",
-    "Setting the rule to informational\n",
-    "Setting the rule to alert only and no Incident Creation\n"
+    "## Quick Config Checks for Rules Not Going to Console\n",
+    "> Decrease/Increase in counts\n",
+    "> Setting the rule to disabled\n",
+    "> Setting the rule to informational\n",
+    "> Setting the rule to alert only and no Incident Creation\n"
    ]
   },
   {
@@ -191,7 +192,8 @@
     }
    },
    "source": [
-    "# Look at Rule Changes Last 14 Days\n"
+    "## Rule Changes Last 14 Days\n",
+    "> Review Rules"
    ]
   },
   {
@@ -221,8 +223,8 @@
     }
    },
    "source": [
-    "# Diff Checks\n",
-    "Check Specific Items\n"
+    "## Diff Checks\n",
+    "> Check Specific Items\n"
    ]
   },
   {
