--- a/Audit-Detect/Audit-Sentinel-Rules.ipynb
+++ b/Audit-Detect/Audit-Sentinel-Rules.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "## Check the Rule Count\n",
     "\n",
-    "> This simply check will let you know if you need to validate any adds or removes"
+    "> - This check will let you know if you need to validate any adds or removes"
    ]
   },
   {
@@ -84,8 +84,8 @@
    },
    "source": [
     "## Alert Per Result Not Set\n",
-    "> Very few Rules should not be set to AlertPerResult\n",
-    "> Majority of Sentinel Logic will be AlertPerResult"
+    "> - Very few Rules should not be set to AlertPerResult\n",
+    "> - Majority of Sentinel Logic will be AlertPerResult"
    ]
   },
   {
@@ -113,10 +113,10 @@
    },
    "source": [
     "## Quick Config Checks for Rules Not Going to Console\n",
-    "> Decrease/Increase in counts\n",
-    "> Setting the rule to disabled\n",
-    "> Setting the rule to informational\n",
-    "> Setting the rule to alert only and no Incident Creation\n"
+    "> - Decrease/Increase in counts\n",
+    "> - Setting the rule to disabled\n",
+    "> - Setting the rule to informational\n",
+    "> - Setting the rule to alert only and not setting Incident Creation\n"
    ]
   },
   {
@@ -193,7 +193,7 @@
    },
    "source": [
     "## Rule Changes Last 14 Days\n",
-    "> Review Rules"
+    "> - Spot check all rules that have changed"
    ]
   },
   {
@@ -224,7 +224,7 @@
    },
    "source": [
     "## Diff Checks\n",
-    "> Check Specific Items\n"
+    "> - Check Specific Items\n"
    ]
   },
   {
